--- a/index.html
+++ b/index.html
@@ -8,24 +8,11 @@
   </head>
   <body>
     <main>
-      <article>
-        <img src="./images/code.webp" alt="viewport" width="480" />
-        <h1>Последние новости веб-разработки</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-          iste quae mollitia voluptas, ex saepe molestias eius debitis harum
-          nisi corporis dicta quibusdam omnis. Magni suscipit aut, accusantium
-          dolores qui autem placeat nostrum eligendi minus, minima perspiciatis
-          earum non vel molestias eaque porro delectus ex doloribus eius illo.
-          Repudiandae ad fugit earum animi, laudantium alias architecto, quos
-          temporibus beatae tempore nihil tempora sunt eveniet vitae atque unde
-          eligendi voluptates soluta sit optio doloribus ea commodi quasi
-          aspernatur? Corporis ipsa placeat ex voluptate, modi eligendi,
-          quibusdam facere, temporibus amet nam animi. Necessitatibus
-          perspiciatis, aliquid nam quaerat explicabo dolore labore sit rerum!
-        </p>
-        <a href="https://github.com/Serjios">Мой Git Hub профиль</a>
-      </article>
+      <ul>
+        <li>
+          <a href="./task1.html">Task1</a>
+        </li>
+      </ul>
     </main>
   </body>
 </html>
