--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <li>
           <a href="./task1.html">Task1</a>
         </li>
+        <li>
+          <a href="./task2.html">Task2</a>
+        </li>
       </ul>
     </main>
   </body>
