--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
         <li>
           <a href="./task2.html">Task2</a>
         </li>
+        <li>
+          <a href="./task3.html">Task3</a>
+        </li>
+        <li>
+          <a href="./task4.html">Task4</a>
+        </li>
+        <li>
+          <a href="./task5.html">Task5</a>
+        </li>
+        <li>
+          <a href="./task6.html">Task6</a>
+        </li>
       </ul>
     </main>
   </body>
