--- a/task2.html
+++ b/task2.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/task2.css" />
     <title>task2</title>
   </head>
   <body>
-    <section>
+    <section class="sotial-networks">
       <h1>Мы в соцсетях</h1>
-      <ul>
-        <li>
+      <ul class="items-menu">
+        <li class="items">
           <a
             href="https://twitter.com"
             target="_blank"
@@ -18,7 +19,7 @@
             >Twitter</a
           >
         </li>
-        <li>
+        <li class="items">
           <a
             href="https://www.instagram.com"
             target="_blank"
@@ -26,7 +27,7 @@
             >Instagram</a
           >
         </li>
-        <li>
+        <li class="items">
           <a
             href="https://www.facebook.com"
             target="_blank"
@@ -34,7 +35,7 @@
             >Facebook</a
           >
         </li>
-        <li>
+        <li class="items">
           <a
             href="https://www.linkedin.com"
             target="_blank"
@@ -42,7 +43,7 @@
             >LinkedIn</a
           >
         </li>
-        <li>
+        <li class="items">
           <a
             href="https://www.reddit.com"
             target="_blank"
