Add css in task2

--- a/task2.html
+++ b/task2.html
@@ -5,52 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>task2</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/task2.css" />
   </head>
   <body>
-    <section>
-      <h1>Мы в соцсетях</h1>
-      <ul>
-        <li>
-          <a
-            href="https://twitter.com"
-            target="_blank"
-            rel="noreferrer noopener"
-            >Twitter</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com"
-            target="_blank"
-            rel="noreferrer noopener"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.facebook.com"
-            target="_blank"
-            rel="noreferrer noopener"
-            >Facebook</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com"
-            target="_blank"
-            rel="noreferrer noopener"
-            >LinkedIn</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.reddit.com"
-            target="_blank"
-            rel="noreferrer noopener"
-            >Reddit</a
-          >
-        </li>
-      </ul>
+    <section class="network">
+      <nav>
+        <h1 class="network-head">Мы в соцсетях</h1>
+        <ul class="network-list">
+          <li class="item">
+            <a
+              href="https://twitter.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >Twitter</a
+            >
+          </li>
+          <li class="item">
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >Instagram</a
+            >
+          </li>
+          <li class="item">
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >Facebook</a
+            >
+          </li>
+          <li class="item">
+            <a
+              href="https://www.linkedin.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >LinkedIn</a
+            >
+          </li>
+          <li class="item">
+            <a
+              href="https://www.reddit.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >Reddit</a
+            >
+          </li>
+        </ul>
+      </nav>
     </section>
   </body>
 </html>
