--- a/task4.html
+++ b/task4.html
@@ -5,25 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Task4</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/task4.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./task4.html">Kent C. Dodds</a>
-        <ul>
-          <li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="./task4.html">Kent C. Dodds</a>
+        <ul class="item-menu">
+          <li class="item">
             <a href="/blog">Blog</a>
           </li>
-          <li>
+          <li class="item">
             <a href="/talks">Talks</a>
           </li>
-          <li>
+          <li class="item">
             <a href="/workshops">Workshops</a>
           </li>
-          <li>
-            <a href="/podcast">podcast</a>
+          <li class="item">
+            <a href="/podcast">Podcast</a>
           </li>
-          <li>
+          <li class="item">
             <a href="/about">About</a>
           </li>
         </ul>
