--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tasks list</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <main>
-      <ul>
-        <li>
-          <a href="./task1.html">Task1</a>
-        </li>
-        <li>
-          <a href="./task2.html">Task2</a>
-        </li>
-        <li>
-          <a href="./task3.html">Task3</a>
-        </li>
-        <li>
-          <a href="./task4.html">Task4</a>
-        </li>
-        <li>
-          <a href="./task5.html">Task5</a>
-        </li>
-        <li>
-          <a href="./task6.html">Task6</a>
-        </li>
-      </ul>
+      <nav class="site-nav">
+        <ul class="nav-list">
+          <li class="item">
+            <a href="./task1.html">Task1</a>
+          </li>
+          <li class="item">
+            <a href="./task2.html">Task2</a>
+          </li>
+          <li class="item">
+            <a href="./task3.html">Task3</a>
+          </li>
+          <li class="item">
+            <a href="./task4.html">Task4</a>
+          </li>
+          <li class="item">
+            <a href="./task5.html">Task5</a>
+          </li>
+          <li class="item">
+            <a href="./task6.html">Task6</a>
+          </li>
+        </ul>
+      </nav>
     </main>
   </body>
 </html>
