--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <li class="item">
             <a href="./task6.html">Task6</a>
           </li>
+          <li class="item">
+            <a href="./task7.html">Task7</a>
+          </li>
         </ul>
       </nav>
     </main>
