Fixed task4.css and html

--- a/task4.html
+++ b/task4.html
@@ -14,24 +14,26 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./task4.html">Kent C. Dodds</a>
-        <ul class="item-menu">
-          <li class="item">
-            <a href="/blog">Blog</a>
-          </li>
-          <li class="item">
-            <a href="/talks">Talks</a>
-          </li>
-          <li class="item">
-            <a href="/workshops">Workshops</a>
-          </li>
-          <li class="item">
-            <a href="/podcast">Podcast</a>
-          </li>
-          <li class="item">
-            <a href="/about">About</a>
-          </li>
-        </ul>
+        <div class="container">
+          <a class="logo" href="./task4.html">Kent C. Dodds</a>
+          <ul class="item-menu">
+            <li class="item">
+              <a href="/blog" class="item-link">Blog</a>
+            </li>
+            <li class="item">
+              <a href="/talks" class="item-link">Talks</a>
+            </li>
+            <li class="item">
+              <a href="/workshops" class="item-link">Workshops</a>
+            </li>
+            <li class="item">
+              <a href="/podcast" class="item-link">Podcast</a>
+            </li>
+            <li class="item">
+              <a href="/about" class="item-link">About</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
   </body>
