--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <li class="item">
             <a href="./task7.html">Task7</a>
           </li>
+          <li class="item">
+            <a href="./task8.html">Task8</a>
+          </li>
         </ul>
       </nav>
     </main>
