--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <li class="item">
             <a href="./task8.html">Task8</a>
           </li>
+          <li class="item">
+            <a href="./task5-1.html">Task5-1</a>
+          </li>
         </ul>
       </nav>
     </main>
