--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <li class="item">
             <a href="./task5-1.html">Task5-1</a>
           </li>
+          <li class="item">
+            <a href="./task5-2.html">Task5-2</a>
+          </li>
         </ul>
       </nav>
     </main>
