--- a/Tasks/task1.html
+++ b/Tasks/task1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <article>
-      <img src="./images/code.webp" alt="viewport" width="480" />
+      <img src="../images/code.webp" alt="viewport" width="480" />
       <h1>Последние новости веб-разработки</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem iste
