--- a/Tasks/task2.html
+++ b/Tasks/task2.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/task2.css" />
+    <link rel="stylesheet" href="../css/task2.css" />
   </head>
   <body>
     <section class="sotial-networks">
