--- a/index.html
+++ b/index.html
@@ -16,34 +16,40 @@
       <nav class="site-nav">
         <ul class="nav-list">
           <li class="item">
-            <a href="./task1.html">Task1</a>
+            <a href="./Tasks/task1.html">Task1</a>
           </li>
           <li class="item">
-            <a href="./task2.html">Task2</a>
+            <a href="./Tasks/task2.html">Task2</a>
           </li>
           <li class="item">
-            <a href="./task3.html">Task3</a>
+            <a href="./Tasks/task3.html">Task3</a>
           </li>
           <li class="item">
-            <a href="./task4.html">Task4</a>
+            <a href="./Tasks/task4.html">Task4</a>
           </li>
           <li class="item">
-            <a href="./task5.html">Task5</a>
+            <a href="./Tasks/task5.html">Task5</a>
           </li>
           <li class="item">
-            <a href="./task6.html">Task6</a>
+            <a href="./Tasks/task6.html">Task6</a>
           </li>
           <li class="item">
-            <a href="./task7.html">Task7</a>
+            <a href="./Tasks/task7.html">Task7</a>
           </li>
           <li class="item">
-            <a href="./task8.html">Task8</a>
+            <a href="./Tasks/task8.html">Task8</a>
           </li>
           <li class="item">
-            <a href="./task5-1.html">Task5-1</a>
+            <a href="./Tasks/task5-1.html">Task5-1</a>
           </li>
           <li class="item">
-            <a href="./task5-2.html">Task5-2</a>
+            <a href="./Tasks/task5-2.html">Task5-2</a>
+          </li>
+          <li class="item">
+            <a href="./Tasks/task5-3.html">Task5-3</a>
+          </li>
+          <li class="item">
+            <a href="./Tasks/task5-4.html">Task5-4</a>
           </li>
         </ul>
       </nav>
