--- a/Tasks/task4.html
+++ b/Tasks/task4.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/task4.css" />
+    <link rel="stylesheet" href="../css/task4.css" />
   </head>
   <body>
     <header class="header">
