--- a/Tasks/task5-2.html
+++ b/Tasks/task5-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Task5-2</title>
-    <link rel="stylesheet" href="./css/task5-2.css" />
+    <link rel="stylesheet" href="../css/task5-2.css" />
   </head>
   <body>
     <section>
