--- a/Tasks/task8.html
+++ b/Tasks/task8.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Task8</title>
-    <link rel="stylesheet" href="./css/task8.css" />
+    <link rel="stylesheet" href="../css/task8.css" />
   </head>
   <body>
     <ul class="list">
