--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
           <li class="item">
             <a href="./Tasks/task5-4.html">Task5-4</a>
           </li>
+          <li class="item">
+            <a href="./Tasks/task6-1.html">Task6-1</a>
+          </li>
+          <li class="item">
+            <a href="./Tasks/task6-2.html">Task6-2</a>
+          </li>
+          <li class="itm">
+            <a href="./Tasks/task6-3.html">Task6-3</a>
+          </li>
         </ul>
       </nav>
     </main>
