--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
           <li class="itm">
             <a href="./Tasks/task6-3.html">Task6-3</a>
           </li>
+          <li class="item">
+            <a href="./Tasks/task7-1.html">Task7-1</a>
+          </li>
+          <li class="item">
+            <a href="./Tasks/task7-2.html">Task7-2</a>
+          </li>
+          <li class="item">
+            <a href="./Tasks/task7-3.html">Task7-3</a>
+          </li>
+          <li class="item">
+            <a href="./Tasks/task7-4.html">Task7-4</a>
+          </li>
         </ul>
       </nav>
     </main>
