--- a/Tasks/task7-3.html
+++ b/Tasks/task7-3.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Task7-3</title>
+    <link rel="stylesheet" href="../css/task7-3.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="red"></div>
+
+      <div class="wrapper">
+        <div class="green"></div>
+        <div class="blue"></div>
+      </div>
+    </div>
+  </body>
 </html>
