--- a/Tasks/task7-4.html
+++ b/Tasks/task7-4.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Task7-4</title>
+    <link rel="stylesheet" href="../css/task7-4.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <section class="features">
+        <div class="feature">Feature</div>
+        <div class="feature">Feature</div>
+      </section>
+
+      <section class="items">
+        <div class="item">Item</div>
+        <div class="item">Item</div>
+        <div class="item">Item</div>
+      </section>
+    </div>
+  </body>
 </html>
